Mobile - Fix feed posts to always be aligned to the left

--- a/src/app/components/timeline-feed/timeline-feed.component.css
+++ b/src/app/components/timeline-feed/timeline-feed.component.css
@@ -372,7 +372,7 @@
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
     background-color: white;
     padding: 0px 12px;
