--- a/src/app/components/user-feed/user-feed.component.css
+++ b/src/app/components/user-feed/user-feed.component.css
@@ -88,6 +88,7 @@
     line-height: 1;
   }
  }  
+
 @media (min-width: 600px) and (max-width: 900px) {
   .search-results {
     height:100%;   
@@ -201,7 +202,7 @@
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
     background-color: white;
     padding: 0px 12px;
